# ERPNEXT-CompanyManagement

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
company_management/: hooks.py  modules.txt  patches.txt
company_management/company_management/doctype/appraisal_assessment_group/: appraisal_assessment_group.js  appraisal_assessment_group.json  appraisal_assessment_group.py  appraisal_assessment_group_tree.js  test_appraisal_assessment_group.py
company_management/company_management/doctype/appraisal_grading_scale/: appraisal_grading_scale.js  appraisal_grading_scale.json  appraisal_grading_scale.py  test_appraisal_grading_scale.py
company_management/company_management/doctype/appraisal_grading_scale_interval/: appraisal_grading_scale_interval.json  appraisal_grading_scale_interval.py
company_management/company_management/doctype/compensation/: compensation.js  compensation.json  compensation.py  test_compensation.py
company_management/company_management/doctype/compensationcommitments/: compensationcommitments.js  compensationcommitments.json  compensationcommitments.py  test_compensationcommitments.py
company_management/company_management/doctype/employee_variable/: employee_variable.js  employee_variable.json  employee_variable.py  test_employee_variable.py
company_management/company_management/doctype/kra/: kra.js  kra.json  (+2 more)
company_management/config/: company_management.py  desktop.py  docs.py
company_management/fixtures/: property_setter.json  workspace.json
company_management/patches/v1_0/: set_variable_percentage_holiday_days.py
(+24 files in other folders)
