[project]
name = "company_management"
version = "1.0.15"
description = "company managemnt"
requires-python = ">=3.10"
dependencies = [
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6",
]
